# mydlp-ui

./: .gitignore  .gitmodules  Makefile.am  README  bootstrap.bat  bootstrap.sh  generate_projects.bat  pom.xml  run-only.bat  run.bat
conf/: jetty-ajp.xml  jetty.conf  jetty.defaults  mydlp-site  mydlp.apache-site  solr.schema.xml
dev-tools/: pkcs12.pfx
external-lib/: dpHibernate-2.0-RC6.swc
mydlp-ui-dao/: pom.xml
mydlp-ui-dao/src/main/java/com/mydlp/ui/dao/: ADDomainDAO.java  ADDomainDAOImpl.java  AbstractDAO.java  AbstractLogDAO.java  AbstractPolicyDAO.java  AbstractReportDAO.java  BundledKeywordGroupDAO.java  BundledKeywordGroupDAOImpl.java  ConfigDAO.java  ConfigDAOImpl.java  CustomActionDAO.java  CustomActionDAOImpl.java  DAOUtil.java  DataFormatDAO.java  DataFormatDAOImpl.java  DiscoveryReportDAO.java  DiscoveryReportDAOImpl.java  DocumentDatabaseDAO.java  DocumentDatabaseDAOImpl.java  EndpointDAO.java  EndpointDAOImpl.java  EndpointStatusDAO.java  EndpointStatusDAOImpl.java  GenericDAO.java  GenericDAOImpl.java  IncidentLogDAO.java  IncidentLogDAOImpl.java  InformationTypeDAO.java  InformationTypeDAOImpl.java  InventoryDAO.java  InventoryDAOImpl.java  LicenseInformationDAO.java  LicenseInformationDAOImpl.java  MIMETypeDAO.java  MIMETypeDAOImpl.java  OperationLogDAO.java  OperationLogDAOImpl.java  RDBMSConnectionDAO.java  RDBMSConnectionDAOImpl.java  RegularExpressionGroupDAO.java  (+17 more)
mydlp-ui-dao/src/main/java/com/mydlp/ui/schema/: AbstractGranule.java  SchemaManager.java  SchemaManagerImpl.java
mydlp-ui-domain/: pom.xml
mydlp-ui-domain-as3/: pom.xml
mydlp-ui-domain-as3/src/main/flex/com/mydlp/ui/domain/: ADDomain.as  ADDomainGroup.as  ADDomainItem.as  ADDomainItemGroup.as  ADDomainOU.as  ADDomainRoot.as  ADDomainUser.as  AbstractEntity.as  AbstractNamedEntity.as  AuthSecurityRole.as  AuthUser.as  Config.as  DashboardItem.as  DiscoveryReport.as  EndpointStatus.as  InformationFeature.as  InventoryCategory.as  InventoryGroup.as  InventoryItem.as  LicenseInformation.as  RDBMSConnection.as  Rule.as  RuleItem.as  WebServer.as
mydlp-ui-domain-as3/template/: entity.gsp  entityBase.gsp
mydlp-ui-domain/src/main/java/com/mydlp/ui/domain/: ADDomain.java  ADDomainAlias.java  ADDomainGroup.java  ADDomainItem.java  ADDomainItemGroup.java  ADDomainOU.java  ADDomainRoot.java  ADDomainUser.java  ADDomainUserAlias.java  AbstractEntity.java  AbstractLog.java  AbstractLogFile.java  AbstractLogFileBlueprint.java  AbstractLogFileContent.java  AbstractLogRequeueStatus.java  AbstractNamedEntity.java  ApiRule.java  ApplicationName.java  Argument.java  AuthSecurityRole.java  AuthUser.java  BundledKeywordGroup.java  Config.java  CoupledRemoteStorage.java  CustomAction.java  CustomActionDescription.java  CustomActionDescriptionSeclore.java  DailySchedule.java  DashboardItem.java  DataFormat.java  Destination.java  DiscoveryReport.java  DiscoveryRule.java  Document.java  DocumentDatabase.java  DocumentDatabaseFileEntry.java  DocumentDatabaseRDBMSEntry.java  DocumentDatabaseRemoteStorage.java  DocumentFingerprint.java  Domain.java  (+73 more)
mydlp-ui-flex/: pom.xml
mydlp-ui-flex-framework/: pom.xml
mydlp-ui-flex-framework/src/main/flex/: manifest.xml
mydlp-ui-flex-framework/src/main/flex/com/mydlp/ui/mxml/: Operation.as  RemoteObject.as
mydlp-ui-flex/alternative/: SessionUtil.Devel.as  SessionUtil.Production.as
mydlp-ui-flex/src/main/flex/: Main.mxml  MainPreloader.as
mydlp-ui-flex/src/main/flex/assets/style/: general.css
mydlp-ui-flex/src/main/flex/com/mydlp/ui/api/: RemoteEntity.as
mydlp-ui-flex/src/main/flex/com/mydlp/ui/skin/: AddBitmapButton128Skin.mxml  AddBitmapButton32Skin.mxml  AddBitmapLabelButton16Skin.mxml  AddBitmapLabelButton24Skin.mxml  AddBitmapLabelButton32Skin.mxml  AddButtonSkin.mxml  ApiRuleBitmapLabelButton16Skin.mxml  ApplicationNameBitmapLabelButton16Skin.mxml  ArrowLeftBitmapLabelButton16Skin.mxml  CalendarBitmapButton16Skin.mxml  CalendarBitmapButton24Skin.mxml  CancelBitmapLabelButton16Skin.mxml  CloseBitmapButton16Skin.mxml  CloseBitmapLabelButton16Skin.mxml  CollapseBitmapButton16Skin.mxml  CollapseBitmapLabelButton16Skin.mxml  CollapseBitmapLabelButton24Skin.mxml  CopyBitmapButton16Skin.mxml  CopyButtonSkin.mxml  CustomButtonBarSkin.mxml  DetailSearchLabelButton16Skin.mxml  DisableRuleButton16Skin.mxml  DisableRuleButton24Skin.mxml  DisableRuleButton32Skin.mxml  (+83 more)
mydlp-ui-flex/src/main/locales/en_US/: messages.properties
mydlp-ui-flex/src/main/locales/tr_TR/: messages.properties
mydlp-ui-flex/src/main/styles/: general.css
mydlp-ui-remoting-blazeds/: pom.xml
mydlp-ui-service/: pom.xml
mydlp-ui-thrift/: pom.xml
mydlp-ui-tools-uploader/: pom.xml
mydlp-ui-tools-uploader-air/: pom.xml
mydlp-ui-tools-uploader-swf/: pom.xml
mydlp-ui-tools-uploader-swf/src/main/flex/: MyDLPUploader.mxml
mydlp-ui-tools-uploader/src/main/flex/: MyDLPUploader-app.xml  MyDLPUploader.mxml  MyDLPUploader.xml
mydlp-ui-tools-uploader/src/main/resources/: placeholder.txt
mydlp-ui-util/: pom.xml
mydlp-ui-webapp/: pom.xml
mydlp-ui-webapp/hsqldb/: .MyDLPLog.sample.log.swp  .MyDLPLog.script.swp  MyDLP.sample.properties  MyDLPLog.lck  MyDLPLog.sample.big.rar  MyDLPReport.properties  MyDLPReport.script
mydlp-ui-webapp/src/main/resources/: logback.xml
mydlp-ui-webapp/src/main/resources/locale/: messages_en_US.properties
mydlp-ui-webapp/src/main/webapp/: login.jsp
mydlp-ui-webapp/src/main/webapp/WEB-INF/: web.xml
mydlp-ui-webapp/src/main/webapp/WEB-INF/flex/: remoting-config.xml  services-config.xml
mydlp-ui-webapp/src/main/webapp/WEB-INF/spring/: application-context.xml  application-dpHibernate.xml  application-messages.xml  application-persistence.xml  application-security.xml  application-web.xml
mydlp-ui-webapp/src/main/webapp/static/apps/: mydlp-uploader.air
(+537 files in other folders)
